# playground_s03e18

./: .gitmodules  pyproject.toml
.ipynb_checkpoints/: notebook template-checkpoint.ipynb
docs/: Explore Multi-Label Classification with an Enzyme Substrate Dataset - Kaggle.url
notebooks/: Explore Multi-Label Classification with an Enzyme Substrate Dataset.ipynb
notebooks/.ipynb_checkpoints/: Explore Multi-Label Classification with an Enzyme Substrate Dataset-checkpoint.ipynb
predictions/: prediction.csv
source/: tests.py
