[tool.poetry]
name = "playground-s03e18"
version = "0.1.0"
description = ""
authors = ["Jorge Hernandez <jorge96hs@gmail.com>"]
readme = "README.md"
packages = [{include = "playground_s03e18"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "2.12.0"
scikit-learn = "1.2.2"
numpy = "1.23.5"
pandas = "2.0.2"
matplotlib = "3.7.1"
lightgbm = "3.3.5"
scikeras = "0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
